--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         </div>
         <div class="button_div">
             <button class="button" type="button">
-                <img class="img" src="https://chaika_combat.github.io/chaika.png">
+                <img class="img" src="https://gitaragames.github.io/chaika_combat.github.io/chaika.png">
             </button>
         </div>
     </div>
