Add script into index.html

--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
 <body>
     <div class="game" align="center">
         <div class="count_div">
-            <p class="count">0</p>
+            <p class="count" id="count_text">0</p>
         </div>
         <div class="button_div">
-            <button class="button" type="button">
+            <button class="button" onclick="click_count()" id="demo">
                 <img class="img" src="https://gitaragames.github.io/chaika_combat.github.io/chaika.png">
             </button>
         </div>
     </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
