--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
 </head>
 <body>
+    <p class="count">Hello, User!</p>
     <div class="game" align="center">
         <div class="count_div">
             <p class="count" id="count_text">0</p>
